# perqara-data

./: README.md  pyproject.toml
plugins/: InstagramAPI.py  TikTokAPI.py
plugins/API/: InstagramAPI.py  TikTokAPI.py  TwitterAPI.py
