[tool.poetry]
name = "perqara-data"
version = "0.1.0"
description = ""
authors = ["yanuar <yanuar@perqara.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiohttp-socks = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
